[gd_scene load_steps=3 format=1]

[ext_resource path="res://hud/hud_root.gd" type="Script" id=1]
[ext_resource path="res://hud/chinzy.fnt" type="BitmapFont" id=2]

[node name="hud_root" type="Node"]

script/script = ExtResource( 1 )

[node name="label_score" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 7.0
margin/top = 7.0
margin/right = 328.0
margin/bottom = 63.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0.705882, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/line_spacing = 3
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 3
text = "Score: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label_menu" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 40.0
margin/top = 219.0
margin/right = 760.0
margin/bottom = 486.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0.705882, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/line_spacing = 3
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 3
text = "AirWars\n\nPress Enter to Start!\n\n:D"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label_game_over" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 175.0
margin/top = 130.0
margin/right = 648.0
margin/bottom = 559.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0.705882, 0, 1 )
text = "HIGH SCORE!\n\n0000000\n\n\nPress Enter\n\nto PLAY AGAIN!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


